支払い記録削除用エンドポイント作成
